# bookmarks

./: .gitignore  Cargo.toml
.fossil-settings/: ignore-glob
bookmarks-cli/: Cargo.toml
bookmarks-cli/src/: main.rs
bookmarks-cli/src/tui/: data.rs  event.rs  mod.rs  terminal_events.rs
bookmarks-cli/src/tui/app/: mod.rs  stack.rs  state.rs
bookmarks-cli/src/tui/app/view/: edit.rs  error.rs  loader.rs  main.rs  mod.rs
bookmarks-cli/src/tui/app/view/main/: loader.rs  mod.rs  selected_block.rs
bookmarks-data/: Cargo.toml
bookmarks-data/src/: lib.rs  toml_file_iterator.rs
bookmarks-sync/: Cargo.toml
