[package]
name = "bookmarks-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
bookmarks-data.workspace = true
tracing.workspace = true
mimalloc.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["json"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
color-eyre = "0.6.5"
clap = { version = "4.5.40", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.3", default-features = false, features = [
	"tracing",
] }
tokio = { version = "1.46.1", features = ["full"] }
futures = "0.3.31"
strum = { version = "0.27", features = ["derive"] }
