[package]
name = "bookmarks-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
bookmarks-data.workspace = true
tracing.workspace = true
mimalloc.workspace = true
tracing-subscriber.workspace = true
crossterm.workspace = true
ratatui.workspace = true
color-eyre.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
tokio.workspace = true
futures.workspace = true
strum.workspace = true
